style: fix the validation and error styled icons

--- a/input.html
+++ b/input.html
@@ -116,15 +116,17 @@
                     <input 
                     class="success-styled"
                     placeholder="Success"></input>
-                    <span><img src="./Resources /Images/green_tick.png" height="30px"></span>
-                    <div class="success-div">Looks Good</div>
+                    <span><img class="event-icons" src="./Resources /Icons/agt_action_success.png" height="30px"></span>
+                    <div 
+                    class="success-div">Looks Good</div>
                 </div>
 
                 <div class="input">
                     <input 
                     class="error-styled"
                     placeholder="Error"></input>
-                    <span><img src="./Resources /Images/red_cross.png" height="30px" width="40px"></span>
+                    <span><img class="event-icons"
+                        src="./Resources /Icons/error5.png" height="40px" width="40px"></span>
                     <div class="error-div">Looks Good</div>
                 </div>
               </div>
