style : addded padding to the bottom

--- a/input.html
+++ b/input.html
@@ -47,8 +47,8 @@
                 sandbox="allow-scripts allow-same-origin">
             </iframe>
 
-             <h4 class="subheadingAvatar">Input with different sizes</h4>
-             <p class="descriptionAvatar">Here is the basic input field with the placeholder.</p>
+             <h4 class="subheading">Input with different sizes</h4>
+             <p class="description">Here is the basic input field with the placeholder.</p>
 
              <div class="inputContainer">
                  <div class="input">
